--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
 
            </ul>
        </div>
+       <div class="pagination-container none">
+            <ul class="pagination">
+
+            </ul>
+       </div>
     </div>
     <script src="service.js"></script>
+    <script src="pagination.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
